# Battleship-GA

./: .gitignore  CMakeLists.txt  Makefile  README.md  changes_summary.md  improvements_summary.md  summary.md
logs/: ga_20250517_045050.txt  ga_20250517_045250.txt  ga_20250517_045923.txt  ga_20250517_045932.txt  ga_20250517_050358.txt  ga_20250517_051146.txt  ga_20250517_051149.txt  ga_20250517_051840.txt  ga_20250517_054028.txt  ga_20250517_054913.txt  ga_20250517_194724.txt  ga_20250517_194817.txt  ga_20250517_203358.txt  ga_20250517_204750.txt
src/: main.cpp
src/ga/: constants.h  decision_chromosome.cpp  decision_chromosome.h  decision_ga.cpp  decision_ga.h  fitness.cpp  fitness.h  placement_chromosome.cpp  placement_chromosome.h  placement_ga.cpp  placement_ga.h  placement_generator.cpp  placement_generator.h  placement_pool.cpp  placement_pool.h
src/models/: board.cpp  board.h  cell.h  fleet.cpp  fleet.h  ship.cpp  ship.h
src/simulator/: evaluator.cpp  evaluator.h  game.cpp  game.h
src/strategies/: checkerboard_strategy.h  feature_based_strategy.cpp  feature_based_strategy.h  features.cpp  features.h  monte_carlo_strategy.cpp  monte_carlo_strategy.h  random_strategy.h  strategy.h
src/utils/: io.cpp  io.h  logger.cpp  logger.h  rng.cpp  rng.h
